// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component should be rendered correctly 1`] = `
<PageGrid
  container={true}
  direction="column"
  wrap="nowrap"
>
  <Header
    content={
      <SearchForm
        onSearch={[MockFunction]}
      />
    }
    hasSearch={false}
  />
  <SplitPane
    left={<Connect(FilmsFound) />}
    right={
      <SortBy
        onOptionChange={[MockFunction]}
        options={
          Array [
            Object {
              "id": "release_date",
              "label": "release date",
            },
            Object {
              "id": "vote_average",
              "label": "rating",
            },
          ]
        }
        selectedOptionId="release_date"
      />
    }
  />
  <PageContentWrapper>
    <Connect(FilmsList) />
  </PageContentWrapper>
  <Footer />
</PageGrid>
`;

exports[`Home component should be rendered correctly with loading 1`] = `
<PageGrid
  container={true}
  direction="column"
  wrap="nowrap"
>
  <Header
    content={
      <SearchForm
        onSearch={[MockFunction]}
      />
    }
    hasSearch={false}
  />
  <SplitPane
    left={<Connect(FilmsFound) />}
    right={
      <SortBy
        onOptionChange={[MockFunction]}
        options={
          Array [
            Object {
              "id": "release_date",
              "label": "release date",
            },
            Object {
              "id": "vote_average",
              "label": "rating",
            },
          ]
        }
        selectedOptionId="release_date"
      />
    }
  />
  <PageContentWrapper>
    <Loader
      loaderColor="#ec407a"
      size="90px"
    />
  </PageContentWrapper>
  <Footer />
</PageGrid>
`;
